gcc/testsuite/rust/rustc/ui/issues/issue-35075.rs
struct Bar<T> {
    inner: Foo<T> // { dg-error ".E0412." "" { target *-*-* } }
}

enum Baz<T> {
    Foo(Foo<T>) // { dg-error ".E0412." "" { target *-*-* } }
}

fn main() {}

